[tool.poetry]
name = "test-env-poetry"
version = "0.1.0"
description = ""
authors = ["Aleksandr K. <test@gmail.com>"]
readme = "README.md"
packages = [{include = "test_env_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
selene = "2.0.0b17"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
